# Howlet

./: CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  pyproject.toml
.claude/: launch.json
.claude/skills/change-control/: SKILL.md
.claude/skills/debugging-playbook/: SKILL.md
.claude/skills/failure-archaeology/: SKILL.md
.github/workflows/: ci.yml
skills/: INDEX.md  aggregate-by-the-real-key.md  cache-by-immutability.md  never-guess-identifiers.md  read-the-briefing-first.md  silent-failure-patterns.md  verify-live-before-done.md  write-the-handover.md
src/edgar/: __init__.py  cache.py  cli.py  client.py  dashboard.html  dashboard.py  diff.py  events.py  form4.py  fulltext.py  fundamentals.py  indicators.py  macro.py  market.py  mcp_server.py  models.py  news.py  nport.py  options.py  presets.py  risk.py  screener.py  tickers.py  views.py  yahoo_auth.py
src/edgar13f/: cli.py  consensus.py  crypto.py  dashboard.html  dashboard.py  fx.py  mcp_server.py  regulatory.py  views.py
tests/: test_cache.py  test_client.py  test_consensus.py  test_crypto.py  test_dashboard.py  test_diff.py  test_events.py  test_form4.py  test_fulltext.py  test_fundamentals.py  test_fx.py  test_indicators.py  test_macro.py  test_market.py  test_news.py  test_nport.py  test_options.py  test_regulatory.py  test_risk.py  test_screener.py  test_smoke.py  test_tickers.py  test_yahoo_auth.py
